<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/characterContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/yellow"
                android:elevation="9dp"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/txtCharacters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/characters"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgCharacters"
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/locations"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_characters"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtCharacters" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/locationContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/pink"
                android:elevation="9dp"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/txtLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/locations"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgLocation"
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/locations"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_locations"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtLocation" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/episodesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/blue"
                android:elevation="9dp"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/txtEpisodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/episodes"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgEpisodes"
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/locations"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_episodes"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtEpisodes" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>
